--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0399860b",
+   "id": "2547e9c8",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4c0845da",
+   "id": "dddaf789",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "97792cb7",
+   "id": "1170961e",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d258c72d",
+   "id": "406962fa",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "63aa6377",
+   "id": "b1f87cba",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b67ba57e",
+   "id": "7c9999a0",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "035be3eb",
+   "id": "0a9a0d2c",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "230996e8",
+   "id": "f74fcff1",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dc54eb79",
+   "id": "d13ef285",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6547bf67",
+   "id": "b82d7ad7",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a8fa1185",
+   "id": "add19d70",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "47ab0d6e",
+   "id": "4dc170b4",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e07a5a82",
+   "id": "606d01cd",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "08cdf1c1",
+   "id": "78517a38",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "11abd62a",
+   "id": "9277824b",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8e89ab70",
+   "id": "307a9d1f",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fd90d3ad",
+   "id": "5d80bff5",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "589f7515",
+   "id": "fc864520",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1d9d5f4f",
+   "id": "5bb2cd88",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a1bfd576",
+   "id": "685a5c2e",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ceb998e1",
+   "id": "be2421b0",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "cdde6e5c",
+   "id": "464510dd",
    "metadata": {},
    "outputs": [
     {
@@ -463,12 +463,12 @@
     "name = input('What is your name? ')\n",
     "company = input('What company do you work for? ')\n",
     "\n",
-    "if (name=='Sara'or name=='sara'\n",
+    "if (name=='Sara' or name=='sara'\n",
     "    and company=='Cisco'or company=='cisco'):\n",
     "    print('That is me!')\n",
     "elif (name=='Sara'or name=='sara'):\n",
     "    print ('Hi, Sara!')\n",
-    "elif company=='Cisco' or company=='cisco': \n",
+    "elif (company=='Cisco' or company=='cisco'): \n",
     "    print('Hi, we are collegues!')\n",
     "else:\n",
     "    print('Oh, you?!')"
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "981123fa",
+   "id": "13bc001e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31b9be2e",
+   "id": "9a86ed0e",
    "metadata": {},
    "outputs": [],
    "source": []
