--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dfe5c5c9",
+   "id": "214becbf",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c794b81b",
+   "id": "2a19e79e",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "809c6a7c",
+   "id": "4fb1f7db",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4cf1b0a2",
+   "id": "24a9ae18",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6b9591b6",
+   "id": "8b861d5a",
    "metadata": {},
    "outputs": [
     {
@@ -111,17 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "c1133aa7",
+   "execution_count": 44,
+   "id": "5259488f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a name: ahmed\n",
+      "Enter a name: seset\n",
       "Enter a company name: cisco\n",
-      "you are me\n"
+      "Hello Colleague\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6451d879",
+   "id": "cc2c1785",
    "metadata": {},
    "outputs": [],
    "source": []
