--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2547e9c8",
+   "id": "d9df90e9",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dddaf789",
+   "id": "626b5923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1170961e",
+   "id": "02dd1a2a",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "406962fa",
+   "id": "5b1a3d5e",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b1f87cba",
+   "id": "a926ba91",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c9999a0",
+   "id": "57a47a81",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0a9a0d2c",
+   "id": "68196962",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f74fcff1",
+   "id": "075f84a3",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d13ef285",
+   "id": "ecb3dddb",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b82d7ad7",
+   "id": "e88e04d7",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "add19d70",
+   "id": "915726c1",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4dc170b4",
+   "id": "e0988fee",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "606d01cd",
+   "id": "f7123a60",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "78517a38",
+   "id": "0a91431c",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9277824b",
+   "id": "50f042a0",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "307a9d1f",
+   "id": "3eb6ec42",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5d80bff5",
+   "id": "388cf29e",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fc864520",
+   "id": "21140838",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5bb2cd88",
+   "id": "49ddc00a",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "685a5c2e",
+   "id": "3ffe8e93",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "be2421b0",
+   "id": "bd3c8fcb",
    "metadata": {},
    "outputs": [
     {
@@ -445,8 +445,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "464510dd",
+   "execution_count": 61,
+   "id": "8865418e",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
      "text": [
       "What is your name? anita\n",
       "What company do you work for? cisco\n",
-      "That is me!\n"
+      "Hi, we are collegues!\n"
      ]
     }
    ],
@@ -463,12 +463,12 @@
     "name = input('What is your name? ')\n",
     "company = input('What company do you work for? ')\n",
     "\n",
-    "if (name=='Sara' or name=='sara'\n",
-    "    and company=='Cisco'or company=='cisco'):\n",
+    "if ((name=='Sara' or name=='sara')\n",
+    "    and (company=='Cisco'or company=='cisco')):\n",
     "    print('That is me!')\n",
-    "elif (name=='Sara'or name=='sara'):\n",
+    "elif name=='Sara'or name=='sara':\n",
     "    print ('Hi, Sara!')\n",
-    "elif (company=='Cisco' or company=='cisco'): \n",
+    "elif company=='Cisco' or company=='cisco': \n",
     "    print('Hi, we are collegues!')\n",
     "else:\n",
     "    print('Oh, you?!')"
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13bc001e",
+   "id": "3a6f95b8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a86ed0e",
+   "id": "b65abeda",
    "metadata": {},
    "outputs": [],
    "source": []
