--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -309,8 +309,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "ea7dbbd4",
+   "execution_count": 50,
+   "id": "c6742383",
    "metadata": {},
    "outputs": [
     {
@@ -318,19 +318,18 @@
      "output_type": "stream",
      "text": [
       "Enter user name: Jaspreet\n",
-      "Enter company name: Cisco\n",
-      " Youre me!\n"
+      "Enter company name: IBM\n"
      ]
     },
     {
      "ename": "NameError",
-     "evalue": "name 'Jaspreet' is not defined",
+     "evalue": "name 'Company' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[48], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJaspreet\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m company \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCisco\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m You\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mre me!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[43mJaspreet\u001b[49m \u001b[38;5;129;01mand\u001b[39;00m Company \u001b[38;5;241m!=\u001b[39m Cisco:\n\u001b[1;32m      6\u001b[0m           \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThis Jaspreet is not from Cisco\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m!=\u001b[39m Jaspreet \u001b[38;5;129;01mand\u001b[39;00m Company \u001b[38;5;241m==\u001b[39m Cisco:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Jaspreet' is not defined"
+      "Cell \u001b[0;32mIn[50], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJaspreet\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m company \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCisco\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m You\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mre me!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJaspreet\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[43mCompany\u001b[49m \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCisco\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m      6\u001b[0m           \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThis Jaspreet is not from Cisco\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJaspreet\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m Company \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCisco\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Company' is not defined"
      ]
     }
    ],
@@ -341,9 +340,9 @@
     "    print(f' You''re me!')\n",
     "if name == 'Jaspreet' and Company != 'Cisco':\n",
     "          print('This Jaspreet is not from Cisco')\n",
-    "if name != Jaspreet and Company == Cisco:\n",
+    "if name != 'Jaspreet' and Company == 'Cisco':\n",
     "          print('Greetings {name}!')\n",
-    "if name != Jaspreet and Company != Cisco:\n",
+    "if name != 'Jaspreet' and Company != 'Cisco':\n",
     "          print(f'I don''t know {name} from {company}')\n",
     "          \n"
    ]
@@ -351,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fc044bc",
+   "id": "03ab7d5c",
    "metadata": {},
    "outputs": [],
    "source": []
