--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f0706b8c",
+   "id": "d7f4cbad",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b7238649",
+   "id": "c112b2df",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1e767ab",
+   "id": "3b8d6d09",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cb08d46",
+   "id": "3cd0999c",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5351482",
+   "id": "8016aab4",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df74ac60",
+   "id": "1db94f92",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96682ae3",
+   "id": "9b1c431e",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "59174ee6",
+   "id": "697a274d",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c54d789c",
+   "id": "1ba1cb44",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "931d619d",
+   "id": "15894593",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6b7ee4c7",
+   "id": "6c7f30c4",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6c169c69",
+   "id": "947ed3c1",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0dbb106e",
+   "id": "b29df451",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "66ba2677",
+   "id": "29b97539",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b92aeaee",
+   "id": "fbfe935b",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4cea8c3c",
+   "id": "c719e4fe",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5a118ab",
+   "id": "7dbe7431",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4969bc86",
+   "id": "c2c3dd4c",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5cf8c9d2",
+   "id": "8cc6eea4",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf1f757a",
+   "id": "46531382",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "432743a3",
+   "id": "cf9aa930",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2deb1bd1",
+   "id": "b33c00e8",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7d861b5a",
+   "id": "846d5790",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e53ccbf3",
+   "id": "38d103bc",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a7ebf0a",
+   "id": "0f4cdaab",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "821cb707",
+   "id": "cfa5e334",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a6f84bd",
+   "id": "7ddd7bcf",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a0025d61",
+   "id": "1fbbbe76",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91151ae4",
+   "id": "d527d58f",
    "metadata": {},
    "source": [
     "# Getting input from the user\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "29232033",
+   "id": "fbccc1da",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d2e8187f",
+   "id": "e2f8f294",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "847c59c9",
+   "id": "d21205d2",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "de0758c9",
+   "id": "2165c52c",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea01c2e7",
+   "id": "30d5691a",
    "metadata": {},
    "source": [
     "# Exercise: Multi-part greeting\n",
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "380fb85f",
+   "id": "b3b3451e",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62c32da5",
+   "id": "4a41805e",
    "metadata": {},
    "source": [
     "# f-strings\n",
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a5dd04ac",
+   "id": "da79fc7b",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "88e1519f",
+   "id": "3e1c0b8c",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c299613",
+   "id": "edd7e322",
    "metadata": {},
    "source": [
     "# Comparing values\n",
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7d7d7a4f",
+   "id": "5b82b6d8",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ad320bda",
+   "id": "d8928de9",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0e1a820a",
+   "id": "252735cd",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4ae24737",
+   "id": "a737a39d",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d2891b86",
+   "id": "2278aded",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2f6fd425",
+   "id": "8d34a54a",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "18116efe",
+   "id": "ca7a6b5b",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "c3cfa2c5",
+   "id": "56d34826",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0b72039",
+   "id": "8e396572",
    "metadata": {},
    "source": [
     "# Comparison operators\n",
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "59b2eb89",
+   "id": "bedd8bde",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "eb905290",
+   "id": "2a67468d",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b52a3b74",
+   "id": "f7b5d2f7",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "37f55fc0",
+   "id": "b4d236de",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "2f42019f",
+   "id": "10414a0b",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f2c52c1",
+   "id": "6020442e",
    "metadata": {},
    "source": [
     "# Conditional execution\n",
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "06e85f43",
+   "id": "37d30840",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f99c6a4c",
+   "id": "4402212d",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3fcce5d",
+   "id": "653cb1d2",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first?\n",
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ca9fbfc9",
+   "id": "e6a18ab2",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cae4b940",
+   "id": "1105597e",
    "metadata": {},
    "source": [
     "# More sophisticated comparisons\n",
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "5d454c3a",
+   "id": "7d07d8af",
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d812b95",
+   "id": "807ccf46",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first? \n",
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92306b96",
+   "id": "72ee206f",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "fb80c1b2",
+   "id": "1bb491f4",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "b6b59c6c",
+   "id": "181c9572",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a696d8dc",
+   "id": "037b08a2",
    "metadata": {},
    "source": [
     "# Combining conditions\n",
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "bb07266c",
+   "id": "d3536b08",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "78b79c87",
+   "id": "5fcc1a9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "186a40c3",
+   "id": "81605e39",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "de2c733a",
+   "id": "7307ae00",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "851b9ff9",
+   "id": "b295a6f4",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0890eecc",
+   "id": "bd37775e",
    "metadata": {},
    "source": [
     "# Exercise: Name and company\n",
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "59c01aec",
+   "id": "d370e297",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "bcae2d34",
+   "id": "3c4306d2",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "c3b946a8",
+   "id": "34284586",
    "metadata": {},
    "outputs": [
     {
@@ -1591,12 +1591,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bebbfbdd",
+   "metadata": {},
+   "source": [
+    "# The `not` logical operator\n",
+    "\n",
+    "`not`, placed before any `True` or `False` value, flips its value. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "d13d5390",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is not 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# you could, in theory, use it here:\n",
+    "\n",
+    "x = 10\n",
+    "\n",
+    "if not x == 20:\n",
+    "    print('It is not 20')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2795529",
+   "id": "397bc891",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# don't write that! Instead, just say\n",
+    "\n",
+    "if x != 20:\n",
+    "    print('')"
+   ]
   }
  ],
  "metadata": {
