--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -309,17 +309,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "ed61a7c7",
+   "execution_count": 54,
+   "id": "711aaa5a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter user name: Harry\n",
+      "Enter user name: Hi\n",
       "Enter company name: Cisco\n",
-      "Greetings {name}!\n"
+      "f Greetings {name}!\n"
      ]
     }
    ],
@@ -331,7 +331,7 @@
     "if name == 'Jaspreet' and company != 'Cisco':\n",
     "    print('This Jaspreet is not from Cisco')\n",
     "if name != 'Jaspreet' and company == 'Cisco':\n",
-    "    print('Greetings {name}!')\n",
+    "    print('f Greetings {name}!')\n",
     "if name != 'Jaspreet' and company != 'Cisco':\n",
     "          print(f'I don''t know {name} from {company}')\n",
     "          \n"
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a97d229",
+   "id": "ddcebed7",
    "metadata": {},
    "outputs": [],
    "source": []
