--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -309,17 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "cd7eb645",
+   "execution_count": 61,
+   "id": "553aafdc",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter user name: Harry\n",
-      "Enter company name: Cisco\n",
-      "Greetings Harry!\n"
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 10) (2613931377.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[61], line 10\u001b[0;36m\u001b[0m\n\u001b[0;31m    print('I don't know {name} from {company}')\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 10)\n"
      ]
     }
    ],
@@ -328,19 +327,19 @@
     "company = input('Enter company name: ')\n",
     "if name == 'Jaspreet' and company == 'Cisco':\n",
     "    print(f' You''re me!')\n",
-    "if name == 'Jaspreet' and company != 'Cisco':\n",
+    "elif name == 'Jaspreet' and company != 'Cisco':\n",
     "    print('This Jaspreet is not from Cisco')\n",
-    "if name != 'Jaspreet' and company == 'Cisco':\n",
+    "elif name != 'Jaspreet' and company == 'Cisco':\n",
     "    print(f'Greetings {name}!')\n",
-    "if name != 'Jaspreet' and company != 'Cisco':\n",
-    "          print(f'I don''t know {name} from {company}')\n",
+    "else:\n",
+    "    print('I don't know {name} from {company}''')\n",
     "          \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b1c2c7c",
+   "id": "331122ee",
    "metadata": {},
    "outputs": [],
    "source": []
